# netchat

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
netchat_app/: __init__.py  __main__.py  app.py
netchat_app/static/: account.js  api.js  chat.js  notif.js  style.css
netchat_app/templates/: index.html
