[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "netchat-app"
version = "1.0.0"
authors = [
  { name="SamuelLouf", email="samuelloufcoder@gmail.com" },
]
description = "A simple python app that creates a basic chat room in your local network."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
keywords = [
  "gui",
  "server",
  "chat",
  "executable"
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "flask"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/samuellouf/netchat.git"
Issues = "https://github.com/samuellouf/netchat/issues"
Changelog = "https://github.com/samuellouf/netchat/blob/master/CHANGELOG.md"

[project.scripts]
netchat = "netchat_app.__main__:main"
netchat-app = "netchat_app.__main__:main"
